Fix a few IntelliJ code analysis warnings.